--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,16 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
   adapter: postgresql
   host: ec2-54-225-135-30.compute-1.amazonaws.com
   database: dcqebkv4fq6atp
-  user: biuwcxecsgjums
+#  user: biuwcxecsgjums
   port: 5432
   password: KQfR984NW_USjNgSB2xgHF9oRo
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: postgresql
   host: ec2-54-225-135-30.compute-1.amazonaws.com
   database: dcqebkv4fq6atp
-  user: biuwcxecsgjums
+#  user: biuwcxecsgjums
   port: 5432
   password: KQfR984NW_USjNgSB2xgHF9oRo
 
@@ -26,6 +18,6 @@ production:
   adapter: postgresql
   host: ec2-54-225-135-30.compute-1.amazonaws.com
   database: dcqebkv4fq6atp
-  user: biuwcxecsgjums
+#  user: biuwcxecsgjums
   port: 5432
   password: KQfR984NW_USjNgSB2xgHF9oRo
