--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ development:
   adapter: postgresql
   host: ec2-54-225-135-30.compute-1.amazonaws.com
   database: dcqebkv4fq6atp
-#  user: biuwcxecsgjums
+  user: biuwcxecsgjums
   port: 5432
   password: KQfR984NW_USjNgSB2xgHF9oRo
 
@@ -10,7 +10,7 @@ test:
   adapter: postgresql
   host: ec2-54-225-135-30.compute-1.amazonaws.com
   database: dcqebkv4fq6atp
-#  user: biuwcxecsgjums
+  user: biuwcxecsgjums
   port: 5432
   password: KQfR984NW_USjNgSB2xgHF9oRo
 
@@ -18,6 +18,6 @@ production:
   adapter: postgresql
   host: ec2-54-225-135-30.compute-1.amazonaws.com
   database: dcqebkv4fq6atp
-#  user: biuwcxecsgjums
+  user: biuwcxecsgjums
   port: 5432
   password: KQfR984NW_USjNgSB2xgHF9oRo
